# skill-harness

./: .gitignore  README.md  skill-harness.code-workspace
.agent/skills/adk2-python-scaffold/: SKILL.md
demo_agent/: README.md  deploy.py  main.py  pyproject.toml  register_to_ge.py  requirements.txt  test_run.py
demo_agent/src/: __init__.py  agent.py  main.py  requirements.txt  test_run.py
demo_agent/src/agents/: __init__.py  report_workflow.py
demo_agent/src/utils/: __init__.py  pdf_exporter.py
